force-app/main/default/objects/Account/fields/Account_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type__c</fullName>
    <label>Account Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Customer</fullName>
            </value>
            <value>
                <fullName>Service Customer</fullName>
            </value>
            <value>
                <fullName>Proshop Customer</fullName>
            </value>
            <value>
                <fullName>Event Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>