force-app/main/default/objects/Account/fields/App_User__c.field-meta.xml
<CustomField>
    <fullName>App_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App User</label>
    <type>Checkbox</type>
</CustomField>