force-app/main/default/objects/Account/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_410, FIND( &apos;/services&apos;, $Api.Enterprise_Server_URL_410))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base URL</label>
    <type>Text</type>
</CustomField>