force-app/main/default/objects/Account/fields/Boat_Location__c.field-meta.xml
<CustomField>
    <fullName>Boat_Location__c</fullName>
    <label>Boat Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>