force-app/main/default/objects/Account/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <label>Brand Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>