force-app/main/default/objects/Account/fields/Buying_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Buying_Time_Frame__c</fullName>
    <label>Buying Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 2 weeks</fullName>
            </value>
            <value>
                <fullName>Less than a month</fullName>
            </value>
            <value>
                <fullName>Less than 6 months</fullName>
            </value>
            <value>
                <fullName>Over 6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>