force-app/main/default/objects/Account/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on Prospect Account Layout.</description>
    <inlineHelpText>Whether catalog is required ?</inlineHelpText>
    <label>Catalog</label>
    <type>Checkbox</type>
</CustomField>