force-app/main/default/objects/Account/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments/Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>