force-app/main/default/objects/Account/fields/Communication_Type_With_Customer__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type_With_Customer__c</fullName>
    <label>Communication Type With Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>