force-app/main/default/objects/Account/fields/Configured_Boat__c.field-meta.xml
<CustomField>
    <fullName>Configured_Boat__c</fullName>
    <label>Configured Boat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>