force-app/main/default/objects/Account/fields/Configured_Boat_URL__c.field-meta.xml
<CustomField>
    <fullName>Configured_Boat_URL__c</fullName>
    <label>Configured Boat URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>