force-app/main/default/objects/Account/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <label>Co-Buyer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>