force-app/main/default/objects/Account/fields/Contact_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zip_Postal_Code__c</fullName>
    <label>Contact Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>