force-app/main/default/objects/Account/fields/Customer_Also_Shopping_Brand_B__c.field-meta.xml
<CustomField>
    <fullName>Customer_Also_Shopping_Brand_B__c</fullName>
    <label>Customer Also Shopping Brand B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MasterCraft</fullName>
            </value>
            <value>
                <fullName>Nautique</fullName>
            </value>
            <value>
                <fullName>Malibu</fullName>
            </value>
            <value>
                <fullName>Axis</fullName>
            </value>
            <value>
                <fullName>Supreme</fullName>
            </value>
            <value>
                <fullName>Centurion</fullName>
            </value>
            <value>
                <fullName>Tige</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>Sanger</fullName>
            </value>
            <value>
                <fullName>Chaparral</fullName>
            </value>
            <value>
                <fullName>Sea Ray</fullName>
            </value>
            <value>
                <fullName>Cobalt</fullName>
            </value>
            <value>
                <fullName>Fourwinds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>