force-app/main/default/objects/Account/fields/Customer_Also_Shopping_Make_A__c.field-meta.xml
<CustomField>
    <fullName>Customer_Also_Shopping_Make_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Also Shopping Make A</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Accounts (Customer Also Shopping Make A)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>