force-app/main/default/objects/Account/fields/Customer_Also_Shopping_Make_B__c.field-meta.xml
<CustomField>
    <fullName>Customer_Also_Shopping_Make_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Also Shopping Make B</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Accounts (Customer Also Shopping Make B)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>