force-app/main/default/objects/Account/fields/Customer_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Balance__c</fullName>
    <label>Customer Balance</label>
    <summarizedField>Credit_Note__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Note__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>