force-app/main/default/objects/Account/fields/Customer_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interested_In__c</fullName>
    <label>Customer Interested In</label>
    <type>TextArea</type>
</CustomField>