force-app/main/default/objects/Account/fields/Customer_Obstacle_1_Plan__c.field-meta.xml
<CustomField>
    <fullName>Customer_Obstacle_1_Plan__c</fullName>
    <label>Customer Obstacle 1 Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>