force-app/main/default/objects/Account/fields/Customer_Obstacle_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Obstacle_2__c</fullName>
    <label>Customer Obstacle 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer has bad credit</fullName>
            </value>
            <value>
                <fullName>Customer is waiting</fullName>
            </value>
            <value>
                <fullName>Customer doesn&apos;t have down payment</fullName>
            </value>
            <value>
                <fullName>Customer likes another brand better</fullName>
            </value>
            <value>
                <fullName>Customer is all over the place</fullName>
            </value>
            <value>
                <fullName>Customer wants to look at other brands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>