force-app/main/default/objects/Account/fields/Customer_Obsticle_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Obsticle_1__c</fullName>
    <label>Customer Obstacle 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>Wrong Color</fullName>
            </value>
            <value>
                <fullName>Price to High</fullName>
            </value>
            <value>
                <fullName>Not ready to Purchase yet</fullName>
            </value>
            <value>
                <fullName>Waiting on house to close</fullName>
            </value>
            <value>
                <fullName>Wrong Model</fullName>
            </value>
            <value>
                <fullName>Customer wants to test drive</fullName>
            </value>
            <value>
                <fullName>Customer wants to much for his boat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>