force-app/main/default/objects/Account/fields/Customer_Trade_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Trade_in_Date__c</fullName>
    <description>When customer may trade in boat</description>
    <label>Customer Trade in Date</label>
    <type>Date</type>
</CustomField>