force-app/main/default/objects/Account/fields/Customer_Wants_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Wants_Type__c</fullName>
    <label>Customer Wants Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Trailers</fullName>
            </value>
            <value>
                <fullName>Transmissions &amp; Gearboxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>