force-app/main/default/objects/Account/fields/Customers_Goal__c.field-meta.xml
<CustomField>
    <fullName>Customers_Goal__c</fullName>
    <description>This is where we put the customers buying goals and notes</description>
    <label>Customers Goal</label>
    <type>TextArea</type>
</CustomField>