force-app/main/default/objects/Account/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date/Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>