force-app/main/default/objects/Account/fields/DB_Scale__c.field-meta.xml
<CustomField>
    <fullName>DB_Scale__c</fullName>
    <label>DB Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Nice</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Bin</fullName>
            </value>
            <value>
                <fullName>Barrel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>