force-app/main/default/objects/Account/fields/DealerDistance__c.field-meta.xml
<CustomField>
    <fullName>DealerDistance__c</fullName>
    <label>Dealer Distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>