force-app/main/default/objects/Account/fields/DealerDistanceMiles__c.field-meta.xml
<CustomField>
    <fullName>DealerDistanceMiles__c</fullName>
    <label>Dealer Distance Miles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>