force-app/main/default/objects/Account/fields/DealerDistanceMilesText__c.field-meta.xml
<CustomField>
    <fullName>DealerDistanceMilesText__c</fullName>
    <label>DealerDistanceMilesText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>