force-app/main/default/objects/Account/fields/Desire_price_high__c.field-meta.xml
<CustomField>
    <fullName>Desire_price_high__c</fullName>
    <label>Desired price high</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>