force-app/main/default/objects/Account/fields/Desire_Price_low__c.field-meta.xml
<CustomField>
    <fullName>Desire_Price_low__c</fullName>
    <label>Desired Price low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>