force-app/main/default/objects/Account/fields/Desired_Boat_Make__c.field-meta.xml
<CustomField>
    <fullName>Desired_Boat_Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desired Boat Make</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>