force-app/main/default/objects/Account/fields/Desired_Boat_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Desired_Boat_Manufacturer__c</fullName>
    <label>Desired Boat Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skiers Choice(Moomba)</fullName>
            </value>
            <value>
                <fullName>Skiers Choice(Supra)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>