force-app/main/default/objects/Account/fields/Desired_Boat_Value_High__c.field-meta.xml
<CustomField>
    <fullName>Desired_Boat_Value_High__c</fullName>
    <label>Desired Boat Value High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>