force-app/main/default/objects/Account/fields/Desired_PaymentBB__c.field-meta.xml
<CustomField>
    <fullName>Desired_PaymentBB__c</fullName>
    <label>Desired Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>