force-app/main/default/objects/Account/fields/Do_they_have_a_Trade2__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_a_Trade2__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Yes if Checked</inlineHelpText>
    <label>Do they have a Trade?</label>
    <type>Checkbox</type>
</CustomField>