force-app/main/default/objects/Account/fields/Do_they_have_a_trade__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_a_trade__c</fullName>
    <label>Trade Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trade Make</fullName>
                <default>true</default>
                <label>Trade Make</label>
            </value>
            <value>
                <fullName>Trade Model</fullName>
            </value>
            <value>
                <fullName>Trade Year</fullName>
            </value>
            <value>
                <fullName>Trade length</fullName>
            </value>
            <value>
                <fullName>Do they have a loan on the trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>