force-app/main/default/objects/Account/fields/Finance_Id__c.field-meta.xml
<CustomField>
    <fullName>Finance_Id__c</fullName>
    <label>Finance Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>