force-app/main/default/objects/Account/fields/FollowUpStatus__c.field-meta.xml
<CustomField>
    <fullName>FollowUpStatus__c</fullName>
    <label>Follow Up Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>