force-app/main/default/objects/Account/fields/Formpage__c.field-meta.xml
<CustomField>
    <fullName>Formpage__c</fullName>
    <label>Form page</label>
    <length>50</length>
    <type>Text</type>
</CustomField>