force-app/main/default/objects/Account/fields/Friends_City__c.field-meta.xml
<CustomField>
    <fullName>Friends_City__c</fullName>
    <label>Friend&apos;s City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>