force-app/main/default/objects/Account/fields/Friends_Email__c.field-meta.xml
<CustomField>
    <fullName>Friends_Email__c</fullName>
    <label>Friend&apos;s Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>