force-app/main/default/objects/Account/fields/Friends_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Friends_First_Name__c</fullName>
    <label>Friend&apos;s First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>