force-app/main/default/objects/Account/fields/Friends_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Friends_Last_Name__c</fullName>
    <label>Friend&apos;s Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>