force-app/main/default/objects/Account/fields/Friends_Phone__c.field-meta.xml
<CustomField>
    <fullName>Friends_Phone__c</fullName>
    <label>Friend&apos;s Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>