force-app/main/default/objects/Account/fields/Get_A_Quote_Comments_Questions__c.field-meta.xml
<CustomField>
    <fullName>Get_A_Quote_Comments_Questions__c</fullName>
    <label>Get A Quote Comments/Questions:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>