force-app/main/default/objects/Account/fields/Hailing_Port__c.field-meta.xml
<CustomField>
    <fullName>Hailing_Port__c</fullName>
    <label>Hailing Port</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>