force-app/main/default/objects/Account/fields/IMT_ID__c.field-meta.xml
<CustomField>
    <fullName>IMT_ID__c</fullName>
    <label>IMT ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>