force-app/main/default/objects/Account/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supra</fullName>
            </value>
            <value>
                <fullName>Moomba</fullName>
            </value>
            <value>
                <fullName>Alumacraft</fullName>
            </value>
            <value>
                <fullName>PWT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>