force-app/main/default/objects/Account/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>This field will hold the IP address coming from the website feed.</description>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>