force-app/main/default/objects/Account/fields/Is_Converted_from_lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_from_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Converted_from_lead</label>
    <type>Checkbox</type>
</CustomField>