force-app/main/default/objects/Account/fields/IsCreatedFromWeb__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedFromWeb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created From Web?</label>
    <type>Checkbox</type>
</CustomField>