force-app/main/default/objects/Account/fields/Joint_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant__c</fullName>
    <label>Joint Applicant Monthly Payment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>