force-app/main/default/objects/Account/fields/Joint_Applicant_Account_Type_2nd_Bank__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Account_Type_2nd_Bank__c</fullName>
    <label>Joint Applicant Account Type 2nd Bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>