force-app/main/default/objects/Account/fields/Joint_Applicant_County__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_County__c</fullName>
    <label>Joint Applicant County</label>
    <length>200</length>
    <type>Text</type>
</CustomField>