force-app/main/default/objects/Account/fields/Joint_Applicant_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Date_of_Birth__c</fullName>
    <label>Joint Applicant Date of Birth</label>
    <length>10</length>
    <type>Text</type>
</CustomField>