force-app/main/default/objects/Account/fields/Joint_Applicant_Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Drivers_License__c</fullName>
    <label>Joint Applicant Drivers License</label>
    <length>200</length>
    <type>Text</type>
</CustomField>