force-app/main/default/objects/Account/fields/Joint_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Email__c</fullName>
    <label>Joint Applicant Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>