force-app/main/default/objects/Account/fields/Joint_Applicant_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Employer_City__c</fullName>
    <label>Joint Applicant Employer City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>