force-app/main/default/objects/Account/fields/Joint_Applicant_Employer_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Employer_ZIP_Postal_Code__c</fullName>
    <label>Joint Applicant Employer ZIP/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>