force-app/main/default/objects/Account/fields/Joint_Applicant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_First_Name__c</fullName>
    <label>Joint Applicant First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>