force-app/main/default/objects/Account/fields/Joint_Applicant_Landlord_Mortgage_Holder__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Landlord_Mortgage_Holder__c</fullName>
    <label>Joint Applicant Landlord/Mortgage Holder</label>
    <length>200</length>
    <type>Text</type>
</CustomField>