force-app/main/default/objects/Account/fields/Joint_Applicant_Monthly_Rent_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Monthly_Rent_Mortgage__c</fullName>
    <label>Joint Applicant Monthly Rent/Mortgage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>