force-app/main/default/objects/Account/fields/Joint_Applicant_Name_of_First_Bank__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Name_of_First_Bank__c</fullName>
    <label>Joint Applicant Name of First Bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>