force-app/main/default/objects/Account/fields/Joint_Applicant_Other_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Other_Income_Frequency__c</fullName>
    <label>Joint Applicant Other Income Frequency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>