force-app/main/default/objects/Account/fields/Joint_Applicant_Previous_State__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Previous_State__c</fullName>
    <label>Joint Applicant Previous State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>