force-app/main/default/objects/Account/fields/Joint_Applicant_Previous_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Previous_Street_Address__c</fullName>
    <label>Joint Applicant Previous Street Address</label>
    <type>TextArea</type>
</CustomField>